scenerypacks class added
Documentation is also updated.

--- a/Documentation/redirect.html
+++ b/Documentation/redirect.html
@@ -7,7 +7,7 @@
 <body>
 <script type="text/javascript">
 <!--
-var pages = ["xpstart.layergroup.Layergroup-c", "xpstart.layergroup.Layer-c", "xpstart.scenery.Scenery-c", "xpstart.xpstart.Base-c", "xpstart.layergroup-m", "xpstart.scenery-m", "xpstart.xpstart-m"];
+var pages = ["xpstart.scenerypacks.Scenerypacks-c", "xpstart.layergroup.Layergroup-c", "xpstart.layergroup.Layer-c", "xpstart.scenery.Scenery-c", "xpstart.scenerypacks-m", "xpstart.xpstart.Base-c", "xpstart.layergroup-m", "xpstart.scenery-m", "xpstart.xpstart-m"];
 var dottedName = get_anchor();
 if (dottedName) {
     var target = redirect_url(dottedName);
