--- a/Documentation/toc-everything.html
+++ b/Documentation/toc-everything.html
@@ -16,11 +16,13 @@
     <a target="mainFrame" href="xpstart.layergroup.Layer-class.html"
      >xpstart.layergroup.Layer</a><br />    <a target="mainFrame" href="xpstart.layergroup.Layergroup-class.html"
      >xpstart.layergroup.Layergroup</a><br />    <a target="mainFrame" href="xpstart.scenery.Scenery-class.html"
-     >xpstart.scenery.Scenery</a><br />    <a target="mainFrame" href="xpstart.xpstart.Base-class.html"
+     >xpstart.scenery.Scenery</a><br />    <a target="mainFrame" href="xpstart.scenerypacks.Scenerypacks-class.html"
+     >xpstart.scenerypacks.Scenerypacks</a><br />    <a target="mainFrame" href="xpstart.xpstart.Base-class.html"
      >xpstart.xpstart.Base</a><br />  <h2 class="toc">All Variables</h2>
     <a target="mainFrame" href="xpstart.layergroup-module.html#__package__"
      >xpstart.layergroup.__package__</a><br />    <a target="mainFrame" href="xpstart.scenery-module.html#__package__"
-     >xpstart.scenery.__package__</a><br />    <a target="mainFrame" href="xpstart.xpstart-module.html#__package__"
+     >xpstart.scenery.__package__</a><br />    <a target="mainFrame" href="xpstart.scenerypacks-module.html#__package__"
+     >xpstart.scenerypacks.__package__</a><br />    <a target="mainFrame" href="xpstart.xpstart-module.html#__package__"
      >xpstart.xpstart.__package__</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
