--- a/Documentation/toc.html
+++ b/Documentation/toc.html
@@ -17,7 +17,8 @@
   <h2 class="toc">Modules</h2>
     <a target="moduleFrame" href="toc-xpstart.layergroup-module.html"
      onclick="setFrame('toc-xpstart.layergroup-module.html','xpstart.layergroup-module.html');"     >xpstart.layergroup</a><br />    <a target="moduleFrame" href="toc-xpstart.scenery-module.html"
-     onclick="setFrame('toc-xpstart.scenery-module.html','xpstart.scenery-module.html');"     >xpstart.scenery</a><br />    <a target="moduleFrame" href="toc-xpstart.xpstart-module.html"
+     onclick="setFrame('toc-xpstart.scenery-module.html','xpstart.scenery-module.html');"     >xpstart.scenery</a><br />    <a target="moduleFrame" href="toc-xpstart.scenerypacks-module.html"
+     onclick="setFrame('toc-xpstart.scenerypacks-module.html','xpstart.scenerypacks-module.html');"     >xpstart.scenerypacks</a><br />    <a target="moduleFrame" href="toc-xpstart.xpstart-module.html"
      onclick="setFrame('toc-xpstart.xpstart-module.html','xpstart.xpstart-module.html');"     >xpstart.xpstart</a><br /><hr />
   <span class="options">[<a href="javascript:void(0);" class="privatelink"
     onclick="toggle_private();">hide&nbsp;private</a>]</span>
