--- a/Documentation/xpstart.scenerypacks-module.html
+++ b/Documentation/xpstart.scenerypacks-module.html
@@ -3,7 +3,7 @@
           "DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>xpstart.layergroup</title>
+  <title>xpstart.scenerypacks</title>
   <link rel="stylesheet" href="epydoc.css" type="text/css" />
   <script type="text/javascript" src="epydoc.js"></script>
 </head>
@@ -40,7 +40,7 @@
     <td width="100%">
       <span class="breadcrumbs">
         Package&nbsp;xpstart ::
-        Module&nbsp;layergroup
+        Module&nbsp;scenerypacks
       </span>
     </td>
     <td>
@@ -50,14 +50,14 @@
     onclick="toggle_private();">hide&nbsp;private</a>]</span></td></tr>
         <tr><td align="right"><span class="options"
             >[<a href="frames.html" target="_top">frames</a
-            >]&nbsp;|&nbsp;<a href="xpstart.layergroup-module.html"
+            >]&nbsp;|&nbsp;<a href="xpstart.scenerypacks-module.html"
             target="_top">no&nbsp;frames</a>]</span></td></tr>
       </table>
     </td>
   </tr>
 </table>
 <!-- ==================== MODULE DESCRIPTION ==================== -->
-<h1 class="epydoc">Module layergroup</h1><p class="nomargin-top"><span class="codelink"><a href="xpstart.layergroup-pysrc.html">source&nbsp;code</a></span></p>
+<h1 class="epydoc">Module scenerypacks</h1><p class="nomargin-top"><span class="codelink"><a href="xpstart.scenerypacks-pysrc.html">source&nbsp;code</a></span></p>
 <!-- ==================== CLASSES ==================== -->
 <a name="section-Classes"></a>
 <table class="summary" border="1" cellpadding="3"
@@ -79,17 +79,8 @@
     <td width="15%" align="right" valign="top" class="summary">
       <span class="summary-type">&nbsp;</span>
     </td><td class="summary">
-        <a href="xpstart.layergroup.Layer-class.html" class="summary-name">Layer</a><br />
-      The model for a scenery layer
-    </td>
-  </tr>
-<tr>
-    <td width="15%" align="right" valign="top" class="summary">
-      <span class="summary-type">&nbsp;</span>
-    </td><td class="summary">
-        <a href="xpstart.layergroup.Layergroup-class.html" class="summary-name">Layergroup</a><br />
-      All sceneries of an x-plane installation can be grouped into 
-        layers.
+        <a href="xpstart.scenerypacks.Scenerypacks-class.html" class="summary-name">Scenerypacks</a><br />
+      Reads and writes the scenery_packs.ini file
     </td>
   </tr>
 </table>
@@ -114,7 +105,7 @@
     <td width="15%" align="right" valign="top" class="summary">
       <span class="summary-type">&nbsp;</span>
     </td><td class="summary">
-        <a name="__package__"></a><span class="summary-name">__package__</span> = <code title="'xpstart'"><code class="variable-quote">'</code><code class="variable-string">xpstart</code><code class="variable-quote">'</code></code>
+        <a name="__package__"></a><span class="summary-name">__package__</span> = <code title="None">None</code>
     </td>
   </tr>
 </table>
