Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
+<a name="idea" class="anchor" href="#idea"><span class="octicon octicon-link"></span></a>Idea</h1>
+
+<p>X-Plane 10 is a very good flightsimulator. It runs on all operating systems and makes really a lot of fun. But there are some things missing. Specially the administration of sceneries is not good solved at the moment. There is no gui which helps the user with the scenery administration. Also all sceneries are handled the same way. </p>
+
+<h1>
 <a name="xpstart---a-better-way-to-start-x-plane" class="anchor" href="#xpstart---a-better-way-to-start-x-plane"><span class="octicon octicon-link"></span></a>xpstart - a better way to start X-Plane</h1>
 
 <h2>
