--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
 <h1>
 <a name="the-situation-in-x-plane" class="anchor" href="#the-situation-in-x-plane"><span class="octicon octicon-link"></span></a>The situation in X-Plane</h1>
 
-<p>But what is the problem? For this we need to look a little bit closer to the different sceneries. Not every scenery does the same. There is for example an airport scenery. Here are information about objects like buildings and taxi- or runways. There are automatic generated sceneries with thousands of objects or phototextures. Now there are also a lot of default airports in the x-plane world. These different kinds of sceneries are ordered by the time of the installation or in alphabetic order. Normally it works, but it can causes some conflicts.</p>
+<p>But what is the problem? For this we need to look a little bit closer to the different sceneries. Not every scenery does the same. There is for example an airport scenery. Here are information about objects like buildings and taxi- or runways. </p>
 
-<p>It doesn't matter if Munic Airport loaded before London or Amsterdam, but the airport of munic should be loaded after the phototexture of Germany.</p>
+<p>There are automatic generated sceneries with thousands of objects or phototextures. Now there are also a lot of default airports in the x-plane world. These different kinds of sceneries are ordered by the time of the installation or in alphabetic order. Normally it works, but it can causes some conflicts.</p>
+
+<p>It doesn't matter if Munich Airport loaded before London or Amsterdam, but the airport of munich should be loaded after the phototexture of Germany.</p>
+
+<p>That the different kind of sceneries are loaded in correct orders we need to group them. A group of sceneries in xpstart are called layer. </p>
 
 <h1>
 <a name="layers" class="anchor" href="#layers"><span class="octicon octicon-link"></span></a>Layers</h1>
@@ -63,7 +67,18 @@
 <strong>exclusion</strong>: Exclusion sceneries just have exclusions inside. Thesese sceneries are necessary, when a custom scenery don't have any exclusions. That there are no problems it is the easiest way to make a scenery just with exclusions inside.</li>
 <li>
 <strong>custom</strong>: Custom sceneries for airports or other landmarks.</li>
-</ul>
+</ul><h1>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
+
+<ul>
+<li>Make sure that python is installed on your computer</li>
+<li>Just unzip the repository and copy it to the root folder of x-plane. To start just click on the xpstart.py file.</li>
+</ul><h1>
+<a name="power-to-the-scenery-creators" class="anchor" href="#power-to-the-scenery-creators"><span class="octicon octicon-link"></span></a>Power to the scenery creators</h1>
+
+<p>In x-plane there is no possibility for the scenery creator to define, when it would be the best moment, when x-plane should initialize that scenery. Specially for libraries, photsceneries or autogen sceneries this possibility would be very useful. </p>
+
+<p>That xpstart orders a scenery to a different layer there is the possibility to define it inside the scenery folder. To do this a textfile <code>scenery.txt</code> should be added inside the scenery folder. To define the layer the command <code>LAYERGROUP layername</code> has to be added to the file. For example <code>LAYERGROUP autogen</code> would order that scenery after the textures but before the default airports.</p>
         </section>
 
         <footer>
