Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <ul>
-<li>Copy the <code>xpstart.py</code> file and the <code>xpstart</code> folder into your x-plane folder.</li>
+<li>Make sure that python is installed. <a href="https://wiki.python.org/moin/BeginnersGuide/Download">How to install Python</a>.</li>
+<li>Copy the <code>xpstart.py</code> file and the <code>xpstart</code> folder into your x-plane folder. If your operating system is Linux or Mac, make sure that the xpstart directory is writeable.</li>
 <li>Ready</li>
 </ul><h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
