Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <ul>
 <li>When you install a new scenery, you copy the scenery into your custom scenery folder</li>
-<li>Then run the xpstart.py script</li>
+<li>Then run the xpstart.py script. The first run of xpstart can take some time (up to 10 minutes), because all your installed sceneries has to been analysed. But the analysed data is saved, so all following runs will take just some seconds.</li>
 <li>Start or restart x-plane</li>
 <li>Ready</li>
 </ul><h2>
