Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 <li>
 <strong>exclusion</strong>: Exclusion sceneries just have exclusions inside. These sceneries are necessary, when a custom scenery don't have any exclusions. That there will be no conflict it is the easiest way to make a scenery just with exclusions inside.</li>
 <li>
+<strong>packs</strong>: Custom scenery packs for airports with more than one airport definition inside.</li>
+<li>
 <strong>custom</strong>: Custom sceneries for airports or other landmarks.</li>
 </ul><h2>
 <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h2>
