Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,21 +85,23 @@
 
 <ul>
 <li>
-<strong>library</strong>: A library is part of the custom scenery folder. It just has objects inside, which can be used by other sceneries. These is the only group where it doesn't matter when it is loaded.</li>
+<strong>Library</strong>: A library is part of the custom scenery folder. It just has objects inside, which can be used by other sceneries. These is the only group where it doesn't matter when it is loaded.</li>
 <li>
-<strong>ground</strong>: Defines the ground mesh of the x-plane world. If there would be a custom scenery just with a mesh inside it should be loaded with that group.</li>
+<strong>Ground mesh</strong>: Defines the ground mesh of the x-plane world. If there would be a custom scenery just with a mesh inside it should be loaded with that group.</li>
 <li>
-<strong>texture</strong>: The photot sceneries e.g. from simheaven.com, are sceneries just with textures inside. </li>
+<strong>Phototextures</strong>: The photot sceneries e.g. from simheaven.com, are sceneries just with textures inside. </li>
 <li>
-<strong>autogen</strong>: Automatic generated sceneries mostly from OpenStreetMap.</li>
+<strong>OSM scenery</strong>: Automatic generated sceneries mostly from OpenStreetMap.</li>
 <li>
-<strong>default</strong>: The x-plane default sceneries.</li>
+<strong>Default scenery</strong>: The x-plane default sceneries.</li>
 <li>
-<strong>exclusion</strong>: Exclusion sceneries just have exclusions inside. These sceneries are necessary, when a custom scenery don't have any exclusions. That there will be no conflict it is the easiest way to make a scenery just with exclusions inside.</li>
+<strong>Exclusion</strong>: Exclusion sceneries just have exclusions inside. Thesese sceneries are necessary, when a custom scenery don't have any exclusions. That there are no problems it is the easiest way to make a scenery just with exclusions inside.</li>
 <li>
-<strong>packs</strong>: Custom scenery packs for airports with more than one airport definition inside.</li>
+<strong>Airport pack</strong>: Custom sceneries for sceneries with more than one airport.</li>
 <li>
-<strong>custom</strong>: Custom sceneries for airports or other landmarks.</li>
+<strong>Airport</strong>: Custom sceneries for airports.</li>
+<li>
+<strong>new add-ons</strong>: Sceneries were it was not possible to find a layer automaticaly</li>
 </ul><h2>
 <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h2>
 
